// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 format[acorn]} 1`] = `
"The keyword 'interface' is reserved (1:7)
> 1 | class interface {}
    |       ^
Cause: The keyword 'interface' is reserved (1:6)"
`;

exports[`snippet: #0 format[acorn]} 2`] = `
"The keyword 'interface' is reserved (1:7)
> 1 | class interface {}
    |       ^
Cause: The keyword 'interface' is reserved"
`;

exports[`snippet: #0 format[acorn]} 3`] = `
"Use of reserved word in strict mode (1:7)
> 1 | class interface {}
    |       ^^^^^^^^^"
`;

exports[`snippet: #0 format[acorn]} 4`] = `
"Unexpected strict mode reserved word (1:7)
> 1 | class interface {}
    |       ^^^^^^^^^
Cause: [1:6-1:15]: Unexpected strict mode reserved word"
`;

exports[`snippet: #0 format[acorn]} 5`] = `
"Unexpected token (1:8)
> 1 | export asyn\\u{63} from "async";
    |        ^
Cause: Unexpected token (1:7)"
`;

exports[`snippet: #0 format[acorn]} 6`] = `
"Unexpected token asyn\\u{63} (1:8)
> 1 | export asyn\\u{63} from "async";
    |        ^
Cause: Unexpected token asyn\\u{63}"
`;

exports[`snippet: #0 format[acorn]} 7`] = `
"Unexpected identifier, expected a declaration, statement or export specifiers (1:8)
> 1 | export asyn\\u{63} from "async";
    |        ^^^^^^^^^^"
`;

exports[`snippet: #0 format[acorn]} 8`] = `
"Unexpected token: 'reserved if strict' (1:8)
> 1 | export asyn\\u{63} from "async";
    |        ^^^^^^^^^^
Cause: [1:7-1:17]: Unexpected token: 'reserved if strict'"
`;

exports[`snippet: #0 format[acorn]} 9`] = `
"Declaration or statement expected. (1:1)
> 1 | export asyn\\u{63} from "async";
    | ^
Cause: Declaration or statement expected."
`;

exports[`snippet: #0 format[acorn]} 10`] = `
"expected declaration in export (1:7)
> 1 | export asyn\\u{63} from "async";
    |       ^
Cause: expected declaration in export (1:7)
export asyn\\u{63} from "async";
       ^~~~~~~~~~"
`;

exports[`snippet: #0 format[acorn]} 11`] = `
"Unexpected token (1:8)
> 1 | export asyn\\u{63} from "async";
    |        ^^^^^^^^^^"
`;

exports[`snippet: #0 format[acorn]} 12`] = `
"Keywords cannot contain escape characters (1:8)
> 1 | export asyn\\u{63} from "async";
    |        ^^^^^^^^^^"
`;

exports[`snippet: #1 format[acorn]} 1`] = `
"The keyword 'interface' is reserved (1:8)
> 1 | import interface from "foo";
    |        ^
Cause: The keyword 'interface' is reserved (1:7)"
`;

exports[`snippet: #1 format[acorn]} 2`] = `
"The keyword 'interface' is reserved (1:8)
> 1 | import interface from "foo";
    |        ^
Cause: The keyword 'interface' is reserved"
`;

exports[`snippet: #1 format[acorn]} 3`] = `
"Use of reserved word in strict mode (1:8)
> 1 | import interface from "foo";
    |        ^^^^^^^^^"
`;

exports[`snippet: #1 format[acorn]} 4`] = `
"Unexpected strict mode reserved word (1:8)
> 1 | import interface from "foo";
    |        ^^^^^^^^^
Cause: [1:7-1:16]: Unexpected strict mode reserved word"
`;
